--- a/Assignment_3.html
+++ b/Assignment_3.html
@@ -23,6 +23,25 @@
             Birthdate: <input type="date" style="margin-bottom: 10px; margin-top: 10px;" required><br />
             E-Mail: <input type="text" placeholder="abc@mail.com" style="margin-bottom: 10px; margin-top: 10px;"><br />
             Password: <input type="password" style="margin-bottom: 10px; margin-top: 10px;" placeholder="*******************"><br />
+            <br /> Gender: 
+<input type="radio" name="gender" value="1" style="margin-bottom: 10px; margin-top: 10px;">Male
+<input type="radio" name="gender" value="2" style="margin-bottom: 10px; margin-top: 10px;">Female
+<input type="radio" name="gender" value="3" style="margin-bottom: 10px; margin-top: 10px;">Other
+<br />
+Upload photo: <input type="image" placeholder="Browse your photo" style="margin-bottom: 20px; margin-top: 20px; margin-left: 20px;" /><br />
+
+Select your course:
+<select>
+    <option value="1">PGDAC</option>
+    <option value="2">PGDAI</option>
+    <option value="3">PGDITISS</option>
+    <option value="4">PGDBDA</option>
+    <opt
+    </select><br />
+<button type="button" value="reg" style="margin-bottom: 10px; margin-top: 10px;">Register</button>
+<button type="button" value="clr" style="margin-bottom: 10px; margin-top: 10px;">Clear</button>
+</b></td>    
+</tr></table></center></body>
 
 </body>
 </html>
