--- a/Assignment_3.html
+++ b/Assignment_3.html
@@ -28,20 +28,17 @@
 <input type="radio" name="gender" value="2" style="margin-bottom: 10px; margin-top: 10px;">Female
 <input type="radio" name="gender" value="3" style="margin-bottom: 10px; margin-top: 10px;">Other
 <br />
-Upload photo: <input type="image" placeholder="Browse your photo" style="margin-bottom: 20px; margin-top: 20px; margin-left: 20px;" /><br />
-
 Select your course:
 <select>
     <option value="1">PGDAC</option>
     <option value="2">PGDAI</option>
     <option value="3">PGDITISS</option>
     <option value="4">PGDBDA</option>
-    <opt
-    </select><br />
+    </select>
+    <br />
 <button type="button" value="reg" style="margin-bottom: 10px; margin-top: 10px;">Register</button>
 <button type="button" value="clr" style="margin-bottom: 10px; margin-top: 10px;">Clear</button>
 </b></td>    
-</tr></table></center></body>
-
+</tr></table></center>
 </body>
 </html>
