--- a/Assignment_3.html
+++ b/Assignment_3.html
@@ -34,6 +34,9 @@ Select your course:
     <option value="2">PGDAI</option>
     <option value="3">PGDITISS</option>
     <option value="4">PGDBDA</option>
+    <option value="5">PGDMC</option>
+    <option value="6">PGDESD</option>
+    <option value="7">PGVLSI</option>
     </select>
     <br />
 <button type="button" value="reg" style="margin-bottom: 10px; margin-top: 10px;">Register</button>
